# php-src-annotation

./: .gitignore  CMakeLists.txt  README.md  configure.ac  test.php
Zend/: zcx.c  zcx.h  zend.c  zend_ast.c  zend_ast.h  zend_compile.c  zend_globals.h  zend_language_parser.y  zend_language_scanner.c  zend_language_scanner.h  zend_language_scanner.l  zend_stream.h  zend_types.h
ext/mbstring/oniguruma/src/: config.h.win32  config.h.win64
main/: main.c
sapi/cli/: php_cli.c
sapi/fpm/fpm/: fpm.c  fpm_conf.h  fpm_events.c  fpm_main.c  fpm_process_ctl.c  fpm_scoreboard.c  fpm_signals.c  fpm_sockets.c  fpm_worker_pool.h
